# Velthoric

./: .gitignore  CONTRIBUTING.md  README.md  build.gradle  flake.nix  gradle.properties  publish.gradle  settings.gradle  settings.gradle.kts  stonecutter.gradle.kts
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  feature-request.yml  feature_request.md  incompatibility.yml  question.yml
.github/workflows/: _reusable-build-mod.yml  _reusable-build-natives.yml  _reusable-gametests.yml  nightly.yml  publish.yml
VxNativeUtil/: build.gradle
VxNativeUtil/src/main/java/net/xmx/vxnative/: Arch.java  OS.java
buildSrc/: build.gradle  build.gradle.kts
buildSrc/src/main/kotlin/: build-extensions.kt  multiloader-common.gradle.kts  multiloader-loader.gradle.kts
changelog/: 0.1.1.md  0.1.2.md  0.2.0.md  0.2.1.md  0.3.0.md  0.3.1.md  0.3.2.md  0.3.3.md  0.4.0.md  0.6.0.md  0.7.0.md  0.8.0.md
common/: build.gradle  build.gradle.kts
common/src/main/java/net/timtaran/interactivemc/: InteractiveMC.java
common/src/main/java/net/xmx/velthoric/: package-info.java
common/src/main/resources/: architectury.common.json  pack.mcmeta  velthoric.accesswidener  velthoric.mixins.json  vortex.mixins.json
common/src/main/resources/assets/interactivemc/lang/: en_us.json  ru_ru.json
common/src/main/resources/assets/velthoric/lang/: en_us.json
common/src/main/resources/assets/vortex/lang/: en_us.json
common/src/main/resources/data/minecraft/structure/: physics_box_empty.nbt  physics_box_funnel.nbt  physics_box_pegs.nbt  physics_box_water.nbt
common/src/main/resources/data/velthoric/velthoric_materials/: banners.json  beds.json  bricks.json  buttons_and_plates.json  candles.json  concrete.json  doors_and_trapdoors.json  earth_types.json  end.json  fences.json  glass.json  ice_and_snow.json  leaves.json  metals_and_gems.json  minecraft_vanilla.json  misc.json  nether.json  ores.json  planks.json  plants.json  signs.json  slabs.json  stairs.json  stone_types.json  terracotta.json  walls.json  wood_and_logs.json  wool_and_carpets.json
fabric/: build.gradle  build.gradle.kts
fabric/src/main/resources/: fabric.mod.json
forge/: build.gradle
forge/src/main/resources/: pack.mcmeta
neoforge/: build.gradle
src/main/java/net/xmx/vortex/api/: PhysicsObjectModule.java
src/main/java/net/xmx/vortex/builtin/: BuiltInPhysicsRegistry.java
src/main/java/net/xmx/vortex/command/: SpawnBoxCommand.java  SpawnClothCommand.java  SpawnHingePairCommand.java  SpawnRopeCommand.java  TestJointCommand.java
src/main/java/net/xmx/vortex/debug/: ClientDebugEvents.java
src/main/java/net/xmx/vortex/init/: RegisterEvents.java  VxMainClass.java
src/main/java/net/xmx/vortex/math/: VxTransform.java
src/main/java/net/xmx/vortex/natives/: NativeFailureHandler.java
src/main/java/net/xmx/vortex/network/: NetworkHandler.java
src/main/java/net/xmx/vortex/physics/: VxLifecycleEvents.java
src/main/java/net/xmx/vortex/test/: ExampleCarRenderer.java
src/main/java/net/xmx/xbullet/api/: PhysicsObjectModule.java  XBulletAPI.java
src/main/java/net/xmx/xbullet/builtin/: BuiltInPhysicsRegistry.java
src/main/java/net/xmx/xbullet/command/: SpawnBoxCommand.java  SpawnClothCommand.java  SpawnHingePairCommand.java  SpawnRopeCommand.java  (+1 more)
src/main/resources/: pack.mcmeta  vortex.mixins.json  xbullet.mixins.json
src/main/resources/assets/xbullet/lang/: en_us.json
versions/1.21.1/: gradle.properties
vx-events/: build.gradle
vx-events/src/main/resources/: vx-events.mixins.json
vx-native/: build.gradle
vx-native/src/main/cpp/: CMakeLists.txt
vx-native/src/main/cpp/src/Velthoric/BodyPairIgnore/: BodyPairIgnoreHandler.cpp  BodyPairIgnoreHandler.h
vx-native/src/main/cpp/src/Velthoric/BodyPairIgnoreHandler/: BodyPairIgnoreHandler.cpp  BodyPairIgnoreHandler.h
vx-native/src/main/cpp/src/Velthoric/BodyPairIgnoreManager/: BodyPairIgnoreManager.cpp  BodyPairIgnoreManager.h
vx-native/src/main/cpp/src/Velthoric/Contact/: VelthoricContactListener.cpp  VelthoricContactListener.h
vx-native/src/main/cpp/src/Velthoric/JNI/: ClassLoaderUtil.cpp  ClassLoaderUtil.h
vx-native/src/main/cpp/src/Velthoric/PhysicsSync/: BatchPhysicsSync.cpp  BatchPhysicsSync.h  VxPhysicsSyncBehavior.cpp  VxPhysicsSyncBehavior.h
vx-native/src/main/cpp/src/Velthoric/Terrain/: TerrainGenerator.cpp  TerrainGenerator.h  TerrainMesher.cpp  TerrainMesher.h  TerrainSystem.cpp  TerrainSystem.h
vx-native/src/main/cpp/src/Velthoric/Terrain/Contact/: TerrainContactHandler.cpp  TerrainContactHandler.h  TerrainContactListener.cpp  TerrainContactListener.h
vx-native/src/main/cpp/src/Velthoric/Terrain/Generation/: TerrainGenerator.cpp  TerrainGenerator.h
vx-native/src/main/cpp/src/Velthoric/Terrain/Interaction/: TerrainInteraction.cpp  TerrainInteraction.h
vx-native/src/main/cpp/src/Velthoric/Terrain/Shape/: TerrainVoxelShape.cpp  TerrainVoxelShape.h
vx-native/src/main/cpp/src/Velthoric/Terrain/State/: TerrainStateManager.cpp  TerrainStateManager.h
vx-native/src/main/cpp/src/Velthoric/Terrain/Tracking/: TerrainTracker.cpp  TerrainTracker.h
vx-renderer/: build.gradle
vx-renderer/src/main/resources/: vx-renderer.mixins.json
(+2067 files in other folders)
